<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Flying Android</string>
    <string name="toggle_app_name">FA Toggle</string>
    <string name="shortcut_app_name">FA Toggle</string>
    <string name="niwatori_app_name">Niwatori</string>
    <string name="niwatori_tachi_app_name">Niwatori Tachi</string>
    <string name="xposed_description">Move the window.\nDeveloped by tkgktyk</string>

    <!-- SharedPreferences -->
    <!-- Note -->
    <string name="note">Note</string>
    <string name="summary_note">Need to recreate window for changes to take effect.</string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="current_s1">Current: %1$s</string>

    <!-- Flying -->
    <string name="flying">Flying&#8230;</string>
    <string name="summary_flying">Settings for behavior of flying.</string>
    <!-- Speed -->
    <string name="speed">Speed</string>
    <string name="pref_key_speed" translatable="false">pref_key_speed</string>
    <string name="note_speed">Recommended value:\n  - around 2 for smartphones.\n  - around 10 for tablets.</string>
    <!-- Initial position -->
    <string name="initial_position">Initial position&#8230;</string>
    <string name="pref_key_initial_position" translatable="false">pref_key_initial_position</string>
    <string name="pref_key_initial_x_percent" translatable="false">pref_key_initial_x_percent</string>
    <string name="pref_key_initial_y_percent" translatable="false">pref_key_initial_y_percent</string>
    <string name="summary_initial_position">Move to this position when you launch FA Toggle.</string>
    <string name="usage_of_initial_position">Drag to change position.\nPress back key to save.</string>
    <!-- Animation -->
    <string name="animation">Animation</string>
    <string name="pref_key_animation" translatable="false">pref_key_animation</string>
    <string name="summary_animation">Movement will be smooth.</string>
    <!-- Notify flying -->
    <string name="notify_flying">Notify flying</string>
    <string name="pref_key_notify_flying" translatable="false">pref_key_notify_flying</string>
    <string name="summary_notify_flying">Draw boundary while flying.</string>
    <!-- Flying dialog -->
    <string name="flying_dialog">Flying Dialog</string>
    <string name="pref_key_flying_dialog" translatable="false">pref_key_flying_dialog</string>
    <string name="summary_flying_dialog">Dialogs can fly by dragging vertically on the edge of them. Note that IME is also dialog.</string>
    <!-- Use Notification -->
    <string name="use_notification">Use Notification Toggle</string>
    <string name="pref_key_use_notification" translatable="false">pref_key_use_notification</string>

    <!-- Pin -->
    <string name="pinning">Pinning&#8230;</string>
    <string name="summary_pinning">Settings for pin.</string>
    <!-- Use pin -->
    <string name="use_pin">Use pin</string>
    <string name="pref_key_use_pin" translatable="false">pref_key_use_pin</string>
    <!-- Always show pin -->
    <string name="always_show_pin">Always show pin</string>
    <string name="pref_key_always_show_pin" translatable="false">pref_key_always_show_pin</string>
    <string name="summary_always_show_pin">pin is always shown on apps.</string>
    <!-- Pin position -->
    <string name="pin_position">Pin position&#8230;</string>
    <string name="pref_key_pin_position" translatable="false">pref_key_pin_position</string>
    <string name="pref_key_pin_x_percent" translatable="false">pref_key_pin_x_percent</string>
    <string name="pref_key_pin_y_percent" translatable="false">pref_key_pin_y_percent</string>
    <string name="summary_pin_position">Long-press to drag pin. Press back key to save.</string>
    <!-- Auto pin -->
    <string name="auto_pin">Auto pin</string>
    <string name="pref_key_auto_pin_selection" translatable="false">pref_key_auto_pin_selection</string>
    <string name="disabled">Disabled</string>
    <string name="when_takeoff">When takeoff</string>
    <string name="after_moving">After moving</string>
    <!-- White list -->
    <string name="white_list">White list&#8230;</string>
    <string name="pref_key_white_list" translatable="false">pref_key_white_list</string>
    <string name="summary_white_list">If not check anything, pin is shown on all apps.</string>
    <!-- Flying status bar -->
    <string name="flying_status_bar">Flying Status Bar</string>
    <string name="pref_key_flying_status_bar" translatable="false">pref_key_flying_status_bar</string>
    <string name="summary_flying_status_bar">Show pin in the expanded status bar.</string>
    <!-- Reset when status bar is collapsed -->
    <string name="reset_when_collapsed">Reset when collapsed</string>
    <string name="pref_key_reset_when_collapsed" translatable="false">pref_key_reset_when_collapsed</string>
    <string name="summary_reset_when_collapsed">Reset flying state when status bar is collapsed. Requires Android 4.2 or later.</string>
    <!-- Use niwatori button -->
    <string name="niwatori_button">Niwatori button</string>
    <string name="pref_key_use_niwatori_button" translatable="false">pref_key_use_niwatori_button</string>
    <string name="summary_use_niwatori_button">Show Niwatori instead of Unpin button. This feature requires your feeling to donate. (Tap \"Donate\" in this app to unlock this feature.)</string>

    <!-- Troubleshooting -->
    <string name="troubleshooting">Troubleshooting&#8230;</string>
    <string name="summary_troubleshooting">Options for troubleshooting.</string>
    <!-- Force set black background -->
    <string name="force_set_black_background">Force set black background&#8230;</string>
    <string name="pref_key_force_set_black_background" translatable="false">pref_key_force_set_black_background</string>
    <string name="summary_force_set_black_background">Check apps for clear background if you encountered a ghost on the outside of app after moving.</string>
    <!-- Blask list -->
    <string name="black_list">Black list&#8230;</string>
    <string name="pref_key_black_list" translatable="false">pref_key_black_list</string>

    <!-- Information -->
    <string name="information">Information</string>
    <!-- Developer -->
    <string name="developer">Developer</string>
    <string name="summary_developer">Flying Android is coded by tkgktyk. Tap to open a thread on XDA.</string>
    <!-- Donate -->
    <string name="donate">Donate</string>
    <string name="summary_donate">Tap to open donation app\'s page on Google Play. (Please donate via donation app.)</string>
    <string name="pref_key_feeling_to_donate" translatable="false">pref_key_feeling_to_donate</string>
	<!-- Special Thanks -->
    <string name="special_thanks">Special Thanks</string>
    <string name="summary_special_thanks">Tap to open information page.</string>
    
    <!-- SelectableListActivity -->
    <string name="show_only_checked">Show only checked</string>
    <string name="show_only_black">Show only black</string>
    <string name="show_only_white">Show only white</string>
    <string name="no_applications">No applications</string>

    <!-- Notification -->
    <string name="notification_title">Toggle Flying Android</string>

</resources>