<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <EditTextPreference
        android:defaultValue="1.5"
        android:dialogMessage="@string/note_speed"
        android:inputType="numberDecimal"
        android:key="@string/pref_key_speed"
        android:selectAllOnFocus="true"
        android:title="@string/speed" />

    <Preference
        android:key="@string/pref_key_initial_position"
        android:summary="@string/summary_initial_position"
        android:title="@string/initial_position" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/pref_key_animation"
        android:summary="@string/summary_animation"
        android:title="@string/animation" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/pref_key_notify_flying"
        android:summary="@string/summary_notify_flying"
        android:title="@string/notify_flying" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/pref_key_flying_dialog"
        android:summary="@string/summary_flying_dialog"
        android:title="@string/flying_dialog" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/pref_key_use_notification"
        android:title="@string/use_notification" />

</PreferenceScreen>